# Ansible-Talk

./: .gitignore  INSTALL.md  Makefile  README.md  cloudbuild.yaml  docker-compose.yml
backend/: go.mod  go.sum
backend-rs/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend-rs/migrations/: 20240101000000_initial_schema.sql
backend-rs/src/: config.rs  error.rs  main.rs
backend-rs/src/api/: middleware.rs  mod.rs  router.rs  websocket.rs
backend-rs/src/api/handlers/: auth.rs  contacts.rs  conversations.rs  devices.rs  keys.rs  messages.rs  mod.rs  stickers.rs  users.rs
backend-rs/src/models/: contact.rs  conversation.rs  device.rs  message.rs  mod.rs  signal_keys.rs  sticker.rs  user.rs
backend-rs/src/services/: auth.rs  contacts.rs  crypto.rs  messaging.rs  mod.rs  stickers.rs
backend-rs/src/storage/: minio.rs  mod.rs  redis.rs
backend/cmd/server/: main.go
backend/internal/api/: handlers.go  handlers_test.go  router.go  websocket.go
backend/internal/auth/: service.go  service_test.go
backend/internal/config/: config.go
backend/internal/contacts/: service.go  service_test.go
backend/internal/crypto/: signal.go  signal_test.go
backend/internal/messaging/: service.go  service_test.go
backend/internal/models/: models.go
backend/internal/stickers/: service.go  service_test.go
backend/migrations/: 001_initial_schema.sql
mobile/: README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/linux/: CMakeLists.txt
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
(+52 files in other folders)
