[package]
name = "ansible-talk-backend"
version = "0.1.0"
edition = "2021"
authors = ["Ansible Talk Team"]
description = "Secure messenger backend with Signal protocol support"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# MinIO/S3
aws-sdk-s3 = "1.0"
aws-config = "1.0"

# Auth
jsonwebtoken = "9"
bcrypt = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
async-trait = "0.1"
base64 = "0.21"
bytes = "1"

# WebSocket
futures = "0.3"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "server"
path = "src/main.rs"
